// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrupalJsonApiParams configuration params function sets the correct include fields 1`] = `"include=field_office,field_administration"`;

exports[`LocationsListing formatData outputs formatted data 1`] = `
{
  "administration": {
    "entityId": 180,
    "name": "VA Lebanon health care",
  },
  "breadcrumbs": [
    {
      "options": [],
      "title": "Home",
      "uri": "https://content-build-medc0xjkxm4jmpzxl3tfbcs7qcddsivh.ci.cms.va.gov/",
    },
    {
      "options": [],
      "title": "VA Lebanon health care",
      "uri": "https://content-build-medc0xjkxm4jmpzxl3tfbcs7qcddsivh.ci.cms.va.gov/lebanon-health-care",
    },
    {
      "options": [],
      "title": "Services and locations",
      "uri": "internal:#",
    },
    {
      "options": [],
      "title": "Locations",
      "uri": "internal:#",
    },
  ],
  "entityId": 3097,
  "entityPath": "/boston-health-care/locations",
  "healthClinicFacilities": [
    {
      "address": undefined,
      "image": {
        "alt": undefined,
        "height": undefined,
        "id": undefined,
        "links": undefined,
        "title": undefined,
        "type": "media--image",
        "width": undefined,
      },
      "mainPhoneString": "800-555-2345",
      "mentalHealthPhoneNumber": {
        "entityId": undefined,
        "extension": "",
        "id": "clinic-phone-id",
        "label": undefined,
        "number": "800-555-9013",
        "phoneType": "voice",
        "type": "paragraph--phone_number",
      },
      "operatingStatusFacility": "normal",
      "path": "/health-clinic",
      "title": "Health Clinic",
      "vaHealthConnectPhoneNumber": "855-679-0952",
    },
  ],
  "id": "eb0c10d2-b199-4665-82db-6241eb6bae56",
  "lastUpdated": "2021-02-17T14:42:50+00:00",
  "mainFacilities": [
    {
      "address": undefined,
      "image": {
        "alt": undefined,
        "height": undefined,
        "id": undefined,
        "links": undefined,
        "title": undefined,
        "type": "media--image",
        "width": undefined,
      },
      "mainPhoneString": "800-555-1234",
      "mentalHealthPhoneNumber": {
        "entityId": undefined,
        "extension": "",
        "id": "main-phone-id",
        "label": undefined,
        "number": "800-555-9012",
        "phoneType": "voice",
        "type": "paragraph--phone_number",
      },
      "operatingStatusFacility": "normal",
      "path": "/main-hospital",
      "title": "Main Hospital",
      "vaHealthConnectPhoneNumber": "855-679-0952",
    },
  ],
  "menu": {
    "data": {
      "description": "Test Description",
      "links": [
        {
          "description": "Test Description",
          "expanded": true,
          "label": "Test Title",
          "links": [],
          "lovellSection": "Test Section",
          "url": {
            "path": "/test-url",
          },
        },
      ],
      "name": "Test Title",
    },
    "rootPath": "/boston-health-care/locations/",
  },
  "metatags": [
    {
      "attributes": {
        "content": "Locations | VA Lebanon health care | Veterans Affairs",
        "name": "title",
      },
      "tag": "meta",
    },
    {
      "attributes": {
        "content": "VA Lebanon Health Care system locations, address, hours of operations, and health care services provided.",
        "name": "description",
      },
      "tag": "meta",
    },
    {
      "attributes": {
        "href": "https://www.va.gov/img/design/logo/va-og-image.png",
        "rel": "image_src",
      },
      "tag": "link",
    },
    {
      "attributes": {
        "content": "Veterans Affairs",
        "property": "og:site_name",
      },
      "tag": "meta",
    },
    {
      "attributes": {
        "content": "Locations | VA Lebanon health care | Veterans Affairs",
        "property": "og:title",
      },
      "tag": "meta",
    },
    {
      "attributes": {
        "content": "VA Lebanon Health Care system locations, address, hours of operations, and health care services provided.",
        "property": "og:description",
      },
      "tag": "meta",
    },
    {
      "attributes": {
        "content": "https://www.va.gov/img/design/logo/va-og-image.png",
        "property": "og:image",
      },
      "tag": "meta",
    },
    {
      "attributes": {
        "content": "U.S. Department of Veterans Affairs",
        "property": "og:image:alt",
      },
      "tag": "meta",
    },
    {
      "attributes": {
        "content": "summary_large_image",
        "name": "twitter:card",
      },
      "tag": "meta",
    },
    {
      "attributes": {
        "content": "Locations | VA Lebanon health care | Veterans Affairs",
        "name": "twitter:title",
      },
      "tag": "meta",
    },
    {
      "attributes": {
        "content": "VA Lebanon Health Care system locations, address, hours of operations, and health care services provided.",
        "name": "twitter:description",
      },
      "tag": "meta",
    },
    {
      "attributes": {
        "content": "@DeptVetAffairs",
        "name": "twitter:site",
      },
      "tag": "meta",
    },
    {
      "attributes": {
        "content": "U.S. Department of Veterans Affairs",
        "name": "twitter:image:alt",
      },
      "tag": "meta",
    },
    {
      "attributes": {
        "content": "https://www.va.gov/img/design/logo/va-og-image.png",
        "name": "twitter:image",
      },
      "tag": "meta",
    },
  ],
  "mobileFacilities": [
    {
      "address": undefined,
      "image": {
        "alt": undefined,
        "height": undefined,
        "id": undefined,
        "links": undefined,
        "title": undefined,
        "type": "media--image",
        "width": undefined,
      },
      "mainPhoneString": "800-555-3456",
      "mentalHealthPhoneNumber": {
        "entityId": undefined,
        "extension": "",
        "id": "mobile-phone-id",
        "label": undefined,
        "number": "800-555-9014",
        "phoneType": "voice",
        "type": "paragraph--phone_number",
      },
      "operatingStatusFacility": "normal",
      "path": "/mobile-clinic",
      "title": "Mobile Clinic",
      "vaHealthConnectPhoneNumber": null,
    },
  ],
  "moderationState": "published",
  "otherVaLocationIds": [],
  "path": "/boston-health-care",
  "published": true,
  "title": "Locations",
  "type": "node--locations_listing",
  "vamcEhrSystem": "vista",
}
`;

exports[`LocationsListing formatData outputs formatted data via getData 1`] = `
{
  "administration": {
    "entityId": 180,
    "name": "VA Lebanon health care",
  },
  "breadcrumbs": [
    {
      "options": [],
      "title": "Home",
      "uri": "https://content-build-medc0xjkxm4jmpzxl3tfbcs7qcddsivh.ci.cms.va.gov/",
    },
    {
      "options": [],
      "title": "VA Lebanon health care",
      "uri": "https://content-build-medc0xjkxm4jmpzxl3tfbcs7qcddsivh.ci.cms.va.gov/lebanon-health-care",
    },
    {
      "options": [],
      "title": "Services and locations",
      "uri": "internal:#",
    },
    {
      "options": [],
      "title": "Locations",
      "uri": "internal:#",
    },
  ],
  "entityId": 3097,
  "entityPath": "/lebanon-health-care/locations",
  "healthClinicFacilities": [
    {
      "address": undefined,
      "image": {
        "alt": undefined,
        "height": undefined,
        "id": undefined,
        "links": undefined,
        "title": undefined,
        "type": "media--image",
        "width": undefined,
      },
      "mainPhoneString": "800-555-1234",
      "mentalHealthPhoneNumber": {
        "entityId": undefined,
        "extension": "",
        "id": "test-phone-id",
        "label": undefined,
        "number": "800-555-9012",
        "phoneType": "voice",
        "type": "paragraph--phone_number",
      },
      "operatingStatusFacility": "normal",
      "path": "/test-facility",
      "title": "Test Facility",
      "vaHealthConnectPhoneNumber": "855-679-0952",
    },
  ],
  "id": "eb0c10d2-b199-4665-82db-6241eb6bae56",
  "lastUpdated": "2021-02-17T14:42:50+00:00",
  "mainFacilities": [],
  "menu": {
    "data": null,
    "rootPath": "/lebanon-health-care/locations/",
  },
  "metatags": [
    {
      "attributes": {
        "content": "Locations | VA Lebanon health care | Veterans Affairs",
        "name": "title",
      },
      "tag": "meta",
    },
    {
      "attributes": {
        "content": "VA Lebanon Health Care system locations, address, hours of operations, and health care services provided.",
        "name": "description",
      },
      "tag": "meta",
    },
    {
      "attributes": {
        "href": "https://www.va.gov/img/design/logo/va-og-image.png",
        "rel": "image_src",
      },
      "tag": "link",
    },
    {
      "attributes": {
        "content": "Veterans Affairs",
        "property": "og:site_name",
      },
      "tag": "meta",
    },
    {
      "attributes": {
        "content": "Locations | VA Lebanon health care | Veterans Affairs",
        "property": "og:title",
      },
      "tag": "meta",
    },
    {
      "attributes": {
        "content": "VA Lebanon Health Care system locations, address, hours of operations, and health care services provided.",
        "property": "og:description",
      },
      "tag": "meta",
    },
    {
      "attributes": {
        "content": "https://www.va.gov/img/design/logo/va-og-image.png",
        "property": "og:image",
      },
      "tag": "meta",
    },
    {
      "attributes": {
        "content": "U.S. Department of Veterans Affairs",
        "property": "og:image:alt",
      },
      "tag": "meta",
    },
    {
      "attributes": {
        "content": "summary_large_image",
        "name": "twitter:card",
      },
      "tag": "meta",
    },
    {
      "attributes": {
        "content": "Locations | VA Lebanon health care | Veterans Affairs",
        "name": "twitter:title",
      },
      "tag": "meta",
    },
    {
      "attributes": {
        "content": "VA Lebanon Health Care system locations, address, hours of operations, and health care services provided.",
        "name": "twitter:description",
      },
      "tag": "meta",
    },
    {
      "attributes": {
        "content": "@DeptVetAffairs",
        "name": "twitter:site",
      },
      "tag": "meta",
    },
    {
      "attributes": {
        "content": "U.S. Department of Veterans Affairs",
        "name": "twitter:image:alt",
      },
      "tag": "meta",
    },
    {
      "attributes": {
        "content": "https://www.va.gov/img/design/logo/va-og-image.png",
        "name": "twitter:image",
      },
      "tag": "meta",
    },
  ],
  "mobileFacilities": [],
  "moderationState": "published",
  "otherVaLocationIds": [
    "vc_0242V",
    "vc_0218V",
    "vha_595QA",
    "vba_310g",
  ],
  "path": "/lebanon-health-care",
  "published": true,
  "title": "Locations",
  "type": "node--locations_listing",
  "vamcEhrSystem": "vista",
}
`;
